src/snapshot_middleware/snapshots/librojo__snapshot_middleware__yaml__test__with_metadata.snap
---
source: src/snapshot_middleware/yaml.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: foo.yaml
  relevant_paths:
    - foo.yaml
    - foo.meta.json
    - foo.meta.jsonc
  context:
    emit_legacy_scripts: true
  specified_id: manually specified
  middleware: ~
  schema: ~
name: foo
class_name: ModuleScript
properties:
  Source:
    String: "return {\n\tvalue = 1234,\n}"
children: []
